# hayal-engine

./: .aider.chat.history.md  .aider.input.history  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  STYLE_GUIDELINES.md  TODO.md  build.sh  build.zig  build.zig.zon  compile_commands.json
shaders/: default_fragment.glsl  default_vertex.glsl
src/: arena.c  arena.h  asset.c  asset.h  engine.rs  game.c  game.cpp  game.h  game.hpp  game.zig  lib.rs  linalg.c  main.rs  main.zig  main_darwin.cpp  main_linux.c  main_linux.cpp  main_unix.cpp  math.c  math.h  math.zig  mem.c  mem.cpp  mem.h  mem.hpp  miniaudio.c  platform.h  platform.zig  platform_linux.c  platform_linux.cpp  render.c  render.h  render.zig  render_gl.c  renderer.h  renderer.hpp  renderer.rs  renderer_gl.c  renderer_gl.cpp  schedule.rs  (+2 more)
src/builtins/: mod.rs
src/game/: asset.c  asset.cpp  text.c  text.cpp
src/hayal/: asset.cpp  asset.h  game.h  mem.cpp  mem.h  platform.h  platform_linux.cpp  renderer.h  renderer_gl.cpp  sdl_wrapper.cpp
src/include/: asset.h  game.h  game.hpp  linalg.h  mem.h  mem.hpp  platform.h  platform.hpp  render.h  renderer.h  renderer.hpp
src/include/game/: asset.h  asset.hpp  text.h  text.hpp
src/platform/: platform.zig  platform_sdl.zig
src/render/: render.zig  renderer_sdl.zig
src/window/: mod.rs
src/world/: errors.rs  mod.rs  query.rs
